# peteksim

./: .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SPEC.md  VIEWER.md  view.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/srs-core/: Cargo.toml
crates/srs-core/src/: data_adapter.rs  inplace.rs  lib.rs  model.rs  refine.rs  run.rs  view.rs
crates/srs-core/src/charts/: bins.rs  crossplot.rs  distribution.rs  mod.rs  tornado.rs
crates/srs-core/src/facade/: charts.rs  framework.rs  grid.rs  mod.rs  model.rs  spec.rs  uncertainty.rs  wells.rs  zonation.rs  zoned_mc.rs
crates/srs-core/src/facade/project/: mod.rs
crates/srs-core/tests/: integration_data.rs
crates/srs-core/tests/fixtures/: simple.irap
crates/srs-pvt/: Cargo.toml
crates/srs-pvt/src/: fvf.rs  lib.rs
crates/srs-py/: Cargo.toml  build.rs  pyproject.toml
crates/srs-py/python/peteksim/: __init__.py  apply.py  synth_asset.py
crates/srs-py/python/peteksim/specs/: __init__.py  asset.py  base.py  mc.py  props.py  settings.py  structure.py
crates/srs-py/src/: lib.rs  viewer.rs
crates/srs-py/src/facade/: framework.rs  grid.rs  mod.rs  model.rs  project.rs  specs.rs  uncertainty.rs
crates/srs-py/tests/: acceptance_render.mjs  conftest.py  test_acceptance.py  test_acceptance_v2.py  test_facade.py  test_peteksim.py  test_realshape.py  test_scatter_dedup.py  test_spec_conformance.py  test_static_workflow_compat.py  test_synth_asset.py  test_viewer.py  test_viewer_schema_v6_delivery.py  test_volume_recut.py  test_wells_payload.py  test_zonation.py
crates/srs-units/: Cargo.toml
crates/srs-units/src/: error.rs  lib.rs
docs/: guide.md
examples/: build_and_view.py  dome_demo.py  model_build_v2.py  staged_build.py  synthetic_tree.py
examples/notebooks/: 02_scenarios_uncertainty.ipynb
src/: lib.rs
src/core/: data_adapter.rs  inplace.rs  mod.rs  model.rs  refine.rs  run.rs  view.rs
src/core/charts/: bins.rs  crossplot.rs  distribution.rs  regression.rs  tornado.rs
src/core/facade/: charts.rs  framework.rs  grid.rs  model.rs  spec.rs  uncertainty.rs  wells.rs  zonation.rs  zoned_mc.rs
src/core/facade/project/: helpers.rs  mod.rs
src/pvt/: fvf.rs  mod.rs
src/units/: error.rs  mod.rs
tests/: integration_data.rs
