[workspace]
resolver = "2"
members = [
    "crates/srs-units",
    "crates/srs-pvt",
    "crates/srs-core",
    "crates/srs-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# BSL-1.1 via its SPDX identifier (BUSL-1.1). The full text ships as the repo-root
# LICENSE; the SPDX id is what crates.io / PyPI surface. (A workspace-root
# `license-file` does not package into individual member crates.)
license = "BUSL-1.1"
repository = "https://github.com/kkollsga/peteksim"
rust-version = "1.80"

[workspace.dependencies]
# INTERNAL workspace crates: `{ path, version }` — path drives LOCAL builds, the
# version pin is written into the published manifest. Published together, in order.
srs-units = { path = "crates/srs-units", version = "0.1.0" }
srs-pvt = { path = "crates/srs-pvt", version = "0.1.0" }
srs-core = { path = "crates/srs-core", version = "0.1.0" }
# CROSS-REPO family deps: crates.io registry pins for publish; the workspace-root
# `[patch.crates-io]` (bottom of this file) redirects each to its sibling working
# tree for LOCAL/CI dev builds (dev-only, stripped from the published crates).
# petekTools (pure-leaf toolkit, downstream DAG edge): numeric kernels + units.
petektools = "0.2.0"
# petekStatic (GEOMODEL layer, downstream DAG edge): the geomodel + static-
# uncertainty crates consumed across the repo seam. petekstatic-error composes
# into SrsError via #[from] so `?` works across the seam.
srs-grid = "0.1.0"
srs-gridder = "0.1.0"
srs-petro = "0.1.0"
srs-wireframe = "0.1.0"
# srs-data: the petekio→wireframe ingest adapter. Carries petekio's neutral
# Distribution DTO; the DTO→sampler mapping (distribution_of) lives in srs-core.
srs-data = "0.1.0"
petekstatic-error = "0.1.0"
# srs-volumetrics + srs-uncertainty (GEOMODEL layer): volumetrics + MC-over-
# realizations. FVF is a validated scalar owned by srs-volumetrics; srs-pvt keeps
# its own copy for the dynamic work.
srs-volumetrics = "0.1.0"
srs-uncertainty = "0.1.0"
# srs-model: the StaticModel aggregate + regeneration seam. srs-core's refine
# facade delegates the geomodel build here and applies the FVF tail on its volumes.
srs-model = "0.1.0"
# petekio (DATA layer): srs-core names petekio's neutral Distribution DTO in
# `distribution_of` (the lifted DTO→sampler mapping). Same one srs-data uses.
petekio = "0.3.0"
thiserror = "2"

# Warnings are errors (CLAUDE.md gate). Applied per-crate via `[lints] workspace = true`.
[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = true
codegen-units = 1

# --- DEV-ONLY: local family builds ------------------------------------------
# The cross-repo deps above (petektools, petekio, and the petekStatic crates) are
# crates.io registry pins for publish. This patch redirects each to its sibling
# working tree so local/CI dev builds compile against family HEAD (one copy of
# each in the lockfile). `[patch]` is a WORKSPACE-ROOT concern: cargo strips it
# from every published member manifest — a downstream consumer of `peteksim`'s
# crates never sees it and resolves the registry pins from crates.io. Harmless in
# the published artifacts; remove once the upstream family crates are on crates.io
# (they become redundant then). Verified: `cargo publish --dry-run` uses the pins.
[patch.crates-io]
petektools = { path = "../petekTools" }
petekio = { path = "../petekIO" }
petekstatic-error = { path = "../petekStatic/crates/petekstatic-error" }
srs-grid = { path = "../petekStatic/crates/srs-grid" }
srs-gridder = { path = "../petekStatic/crates/srs-gridder" }
srs-petro = { path = "../petekStatic/crates/srs-petro" }
srs-wireframe = { path = "../petekStatic/crates/srs-wireframe" }
srs-data = { path = "../petekStatic/crates/srs-data" }
srs-volumetrics = { path = "../petekStatic/crates/srs-volumetrics" }
srs-uncertainty = { path = "../petekStatic/crates/srs-uncertainty" }
srs-model = { path = "../petekStatic/crates/srs-model" }
