[workspace]
resolver = "2"
members = [
    "crates/srs-units",
    "crates/srs-pvt",
    "crates/srs-core",
    "crates/srs-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# BSL-1.1 via its SPDX identifier (BUSL-1.1). The full text ships as the repo-root
# LICENSE; the SPDX id is what crates.io / PyPI surface. (A workspace-root
# `license-file` does not package into individual member crates.)
license = "BUSL-1.1"
repository = "https://github.com/kkollsga/peteksim"
rust-version = "1.80"

[workspace.dependencies]
# INTERNAL workspace crates: `{ path, version }` — path drives LOCAL builds, the
# version pin is written into the published manifest. Published together, in order.
srs-units = { path = "crates/srs-units", version = "0.1.0" }
srs-pvt = { path = "crates/srs-pvt", version = "0.1.0" }
srs-core = { path = "crates/srs-core", version = "0.1.0" }
# CROSS-REPO family deps: resolved from crates.io (the family is published; the
# dev-only [patch.crates-io] was removed at launch).
# petekTools (pure-leaf toolkit, downstream DAG edge): numeric kernels + units.
petektools = "0.2.0"
# petekStatic (GEOMODEL layer, downstream DAG edge): the geomodel + static-
# uncertainty crates consumed across the repo seam. petekstatic-error composes
# into SrsError via #[from] so `?` works across the seam.
srs-grid = "0.1.0"
srs-gridder = "0.1.0"
srs-petro = "0.1.0"
srs-wireframe = "0.1.0"
# srs-data: the petekio→wireframe ingest adapter. Carries petekio's neutral
# Distribution DTO; the DTO→sampler mapping (distribution_of) lives in srs-core.
srs-data = "0.1.0"
petekstatic-error = "0.1.0"
# srs-volumetrics + srs-uncertainty (GEOMODEL layer): volumetrics + MC-over-
# realizations. FVF is a validated scalar owned by srs-volumetrics; srs-pvt keeps
# its own copy for the dynamic work.
srs-volumetrics = "0.1.0"
srs-uncertainty = "0.1.0"
# srs-model: the StaticModel aggregate + regeneration seam. srs-core's refine
# facade delegates the geomodel build here and applies the FVF tail on its volumes.
srs-model = "0.1.0"
# petekio (DATA layer): srs-core names petekio's neutral Distribution DTO in
# `distribution_of` (the lifted DTO→sampler mapping). Same one srs-data uses.
petekio = "0.3.0"
thiserror = "2"

# Warnings are errors (CLAUDE.md gate). Applied per-crate via `[lints] workspace = true`.
[workspace.lints.rust]
unused = { level = "deny", priority = -1 }
dead_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
