[package]
name = "srs-pvt"
description = "PVT correlations and FVF handling (minimal: FVF-as-input)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
srs-units.workspace = true
