[package]
name = "srs-pvt"
description = "PVT correlations and FVF handling (minimal: FVF-as-input)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["reservoir", "pvt", "fvf", "petroleum", "simulation"]
categories = ["science", "simulation"]

[lints]
workspace = true

[dependencies]
srs-units.workspace = true
