[package]
name = "srs-py"
description = "Thin PyO3 bindings over srs-core (the petekSim Python library)"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
srs-core.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
