[package]
name = "srs-py"
description = "Thin PyO3 bindings over the peteksim crate (the petekSim Python library)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Not for crates.io: this crate is the `peteksim` wheel source (built by maturin).
# The Rust library surface is the `peteksim` crate; publishing this cdylib would
# be redundant.
publish = false

[lints]
workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py310"] }
peteksim.workspace = true
# Enabled only for the coordinator's exact-source viewer acceptance build.  The
# normal wheel has no additional direct dependency or Python helper surface.
petekstatic = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
viewer-schema-acceptance = ["dep:petekstatic"]

[dev-dependencies]
# Acceptance-only seam inputs: author the oriented lattice in petekIO's
# vocabulary, build the model in petekStatic, then prove this binding crate
# forwards both bundles without altering their schema-v6 frame.
petekio.workspace = true
