[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "peteksim"
description = "petekSim — fast field/discovery appraisal toolkit (Rust core, Python API): the facade over the petek subsurface-modelling stack."
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
authors = [{ name = "Kristian dF Kollsgård", email = "kkollsg@gmail.com" }]
keywords = ["reservoir", "appraisal", "subsurface", "volumetrics", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
# The viewer is petekTools' horizontal unit (owner ruling
# decision_viewer_home_petektools); peteksim consumes it Python-side, DAG-downward.
# Publish batch: pinned to the petektools 0.2 release line on PyPI.
# Floor 0.2.7: current release-train toolkit floor, including point-only 2-D
# rendering and edge-clipped geometry grids.
# petekstatic owns the canonical static property workflow; peteksim re-exports a
# narrow compatibility shim to those APIs instead of carrying a second workflow.
dependencies = ["petektools>=0.2.7", "petekio>=0.3.8", "petekstatic>=0.1.11"]

[project.urls]
# The petekSuite site is the canonical docs home for the whole family.
Documentation = "https://peteksuite.readthedocs.io/en/latest/libraries/peteksim/"
Repository = "https://github.com/kkollsga/peteksim"
Issues = "https://github.com/kkollsga/peteksim/issues"

[tool.maturin]
# Mixed layout: the compiled extension is peteksim._core; the pure-Python
# package (the thin view()/save_view glue over petektools.viewer) lives under
# python/peteksim/. The viewer JS assets moved to the petektools wheel.
module-name = "peteksim._core"
python-source = "python"
features = ["pyo3/extension-module"]
