[package]
name = "srs-units"
description = "The petekSim workspace error type (SrsError). Unit conversions moved to petektools::units."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["reservoir", "simulation", "petroleum", "units", "error"]
categories = ["science", "simulation"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
# petekStatic's error enum, composed into SrsError via #[from] so `?` chains across
# the geomodel seam (srs-grid/srs-wireframe moved to petekStatic).
petekstatic-error.workspace = true
# petekio (DATA) + petekTools (toolkit) errors composed DIRECTLY into SrsError via
# #[from] (S2): both are downward DAG edges already pulled transitively through
# petekstatic-error, so naming them here adds no new graph edge — it just lets a
# bare seam call chain with `?` in one hop instead of the two-From-hop workaround.
petekio.workspace = true
petektools.workspace = true
